--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
-<app-header [selected]="selected"></app-header>
+<app-header></app-header>
 
 <main>
-  <app-items (itemSelected)="onItemSelected($event)"></app-items>
+  <app-items></app-items>
 </main>
 
-<app-footer [selectedItems]="itemsSelected"></app-footer>
+<app-footer></app-footer>
